travail sur IHM Connection

--- a/WebContent/CSS/style.css
+++ b/WebContent/CSS/style.css
@@ -1,8 +1,13 @@
+header
+{
+	margin-bottom: 30px;
+}
+
 .header
 {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 30px;
+
 }
 
 .inscrireConnect
