--- a/WebContent/CSS/style.css
+++ b/WebContent/CSS/style.css
@@ -39,21 +39,13 @@ header
 .InscritpionDivGauche {
 	margin-right : 25px;
 }
-.InscriptionBouttonCreer {
-	border : solid black 1px;
-	border-radius: 10px;
-	padding : 7px 15px;
-	margin-right : 25px;
-	
-}
-.InscriptionBouttonAnnuler {
-	border :  solid black 1px;
-	border-radius: 10px;
-	padding : 7px 9px;
-}
+
 .InscriptionBouttons {
 	margin-top : 30px;
 	display : flex;
 	justify-content : center;
 	
+}
+.Inscriptiondivbtna {
+	margin-right : 20px;
 }
